--- a/Workout/Base.lproj/Main.storyboard
+++ b/Workout/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Today View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Workout" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="TodayViewController" customModule="Workout" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -38,27 +38,141 @@
                                     <constraint firstAttribute="width" constant="38" id="c20-rJ-9QW"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="feV-j3-SlF">
+                                <rect key="frame" x="20" y="130" width="335" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kEJ-7k-yNp">
+                                <rect key="frame" x="20" y="159" width="335" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xfc-5C-fI2" customClass="PredictiveWorkoutThumbnailView" customModule="Workout" customModuleProvider="target">
+                                <rect key="frame" x="20" y="204" width="335" height="90"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HEADER" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g6E-WZ-VWA">
+                                        <rect key="frame" x="12" y="12" width="315" height="14.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                                        <color key="textColor" red="0.55294117649999996" green="0.55294117649999996" blue="0.58039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Predicted Workout Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sNS-KB-QE8">
+                                        <rect key="frame" x="12" y="34.5" width="315" height="29"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last completed on" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l0T-F0-bRd">
+                                        <rect key="frame" x="12" y="67.5" width="315" height="14.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.81262201880197826" blue="0.43293173471648672" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstItem="sNS-KB-QE8" firstAttribute="leading" secondItem="Xfc-5C-fI2" secondAttribute="leading" constant="12" id="1dB-jN-A2b"/>
+                                    <constraint firstAttribute="bottom" secondItem="l0T-F0-bRd" secondAttribute="bottom" constant="8" id="1ut-6t-Btm"/>
+                                    <constraint firstAttribute="trailing" secondItem="sNS-KB-QE8" secondAttribute="trailing" constant="8" id="7sv-WC-eNl"/>
+                                    <constraint firstAttribute="trailing" secondItem="g6E-WZ-VWA" secondAttribute="trailing" constant="8" id="CkB-kw-Q7s"/>
+                                    <constraint firstItem="sNS-KB-QE8" firstAttribute="top" secondItem="g6E-WZ-VWA" secondAttribute="bottom" constant="8" id="FXW-ds-SgK"/>
+                                    <constraint firstItem="l0T-F0-bRd" firstAttribute="leading" secondItem="Xfc-5C-fI2" secondAttribute="leading" constant="12" id="TCV-GV-MQq"/>
+                                    <constraint firstAttribute="trailing" secondItem="l0T-F0-bRd" secondAttribute="trailing" constant="8" id="Yuf-6l-g1A"/>
+                                    <constraint firstAttribute="height" constant="90" id="bOJ-fn-fpp"/>
+                                    <constraint firstItem="g6E-WZ-VWA" firstAttribute="leading" secondItem="Xfc-5C-fI2" secondAttribute="leading" constant="12" id="d7U-5C-a1l"/>
+                                    <constraint firstItem="g6E-WZ-VWA" firstAttribute="top" secondItem="Xfc-5C-fI2" secondAttribute="top" constant="12" id="zF3-vo-wtF"/>
+                                </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="oOC-iE-wqJ" appends="YES" id="0q0-nm-HFa"/>
+                                </connections>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kzB-by-UlN" customClass="PredictiveWorkoutThumbnailView" customModule="Workout" customModuleProvider="target">
+                                <rect key="frame" x="20" y="314" width="335" height="90"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HEADER" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f6c-7g-i1D">
+                                        <rect key="frame" x="8" y="8" width="319" height="14.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                                        <color key="textColor" red="0.55294117649999996" green="0.55294117649999996" blue="0.58039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Predicted Workout Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Ov-Qs-1lj">
+                                        <rect key="frame" x="8" y="30.5" width="319" height="29"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last completed on" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ylQ-Si-T2S">
+                                        <rect key="frame" x="8" y="67.5" width="319" height="14.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.99901074171066284" green="0.99068337678909302" blue="0.84703743457794189" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstItem="7Ov-Qs-1lj" firstAttribute="leading" secondItem="kzB-by-UlN" secondAttribute="leading" constant="8" id="2wL-08-V1R"/>
+                                    <constraint firstAttribute="height" constant="90" id="CyA-34-XBi"/>
+                                    <constraint firstAttribute="trailing" secondItem="7Ov-Qs-1lj" secondAttribute="trailing" constant="8" id="KbP-xl-qR4"/>
+                                    <constraint firstItem="f6c-7g-i1D" firstAttribute="top" secondItem="kzB-by-UlN" secondAttribute="top" constant="8" id="MxF-Ef-95d"/>
+                                    <constraint firstAttribute="trailing" secondItem="f6c-7g-i1D" secondAttribute="trailing" constant="8" id="R81-p1-7VB"/>
+                                    <constraint firstItem="f6c-7g-i1D" firstAttribute="leading" secondItem="kzB-by-UlN" secondAttribute="leading" constant="8" id="be0-VV-IH7"/>
+                                    <constraint firstAttribute="trailing" secondItem="ylQ-Si-T2S" secondAttribute="trailing" constant="8" id="eaM-Ny-VxL"/>
+                                    <constraint firstItem="7Ov-Qs-1lj" firstAttribute="top" secondItem="f6c-7g-i1D" secondAttribute="bottom" constant="8" id="qjb-oP-gfb"/>
+                                    <constraint firstItem="ylQ-Si-T2S" firstAttribute="leading" secondItem="kzB-by-UlN" secondAttribute="leading" constant="8" id="rre-Pi-9wK"/>
+                                    <constraint firstAttribute="bottom" secondItem="ylQ-Si-T2S" secondAttribute="bottom" constant="8" id="vwS-5Z-vbk"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="9mh-DG-4xj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="0R8-IO-7S1"/>
                             <constraint firstItem="9mh-DG-4xj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="24" id="1xu-fd-CJB"/>
+                            <constraint firstItem="Xfc-5C-fI2" firstAttribute="top" secondItem="kEJ-7k-yNp" secondAttribute="bottom" constant="24" id="4RA-K0-0CY"/>
+                            <constraint firstItem="feV-j3-SlF" firstAttribute="top" secondItem="mh0-xS-X4t" secondAttribute="bottom" constant="24" id="7N4-ZK-PHU"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kEJ-7k-yNp" secondAttribute="trailing" constant="20" id="AhO-RJ-H8g"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="feV-j3-SlF" secondAttribute="trailing" constant="20" id="CSS-9f-dYq"/>
+                            <constraint firstItem="feV-j3-SlF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Dya-EY-Ymj"/>
+                            <constraint firstItem="kzB-by-UlN" firstAttribute="top" secondItem="Xfc-5C-fI2" secondAttribute="bottom" constant="20" id="GUL-bF-qEl"/>
                             <constraint firstItem="2N4-ET-ugO" firstAttribute="leading" secondItem="mh0-xS-X4t" secondAttribute="trailing" constant="8" id="H2F-e4-ipO"/>
                             <constraint firstItem="mh0-xS-X4t" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="PZy-pE-hEt"/>
+                            <constraint firstItem="kEJ-7k-yNp" firstAttribute="top" secondItem="feV-j3-SlF" secondAttribute="bottom" constant="8" id="PtW-zv-krs"/>
                             <constraint firstItem="mh0-xS-X4t" firstAttribute="top" secondItem="9mh-DG-4xj" secondAttribute="bottom" constant="8" id="SLX-Ri-f44"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9mh-DG-4xj" secondAttribute="trailing" constant="20" id="SLd-Eo-sh8"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9mh-DG-4xj" secondAttribute="trailing" constant="20" id="W7B-NM-6Ms"/>
                             <constraint firstItem="9mh-DG-4xj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ZXh-Ma-kak"/>
+                            <constraint firstItem="kEJ-7k-yNp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ipf-UX-zMz"/>
+                            <constraint firstItem="Xfc-5C-fI2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="jkw-iB-rRe"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kzB-by-UlN" secondAttribute="trailing" constant="20" id="mx9-Ll-bhP"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2N4-ET-ugO" secondAttribute="trailing" constant="20" id="sE2-Ge-8Tk"/>
                             <constraint firstItem="2N4-ET-ugO" firstAttribute="top" secondItem="9mh-DG-4xj" secondAttribute="bottom" constant="8" id="tPl-4g-0iM"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Xfc-5C-fI2" secondAttribute="trailing" constant="20" id="thg-BI-hJ7"/>
+                            <constraint firstItem="kzB-by-UlN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="uW8-f1-ygx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="altGuessLabel" destination="7Ov-Qs-1lj" id="Ok5-2y-g2W"/>
+                        <outlet property="altGuessViewHeight" destination="CyA-34-XBi" id="hMk-TJ-ni4"/>
+                        <outlet property="bestGuessHeaderLeading" destination="d7U-5C-a1l" id="dVG-OM-CBx"/>
+                        <outlet property="bestGuessHeaderTop" destination="zF3-vo-wtF" id="6dy-XD-EPe"/>
+                        <outlet property="bestGuessLabel" destination="sNS-KB-QE8" id="mDE-Ub-HrW"/>
+                        <outlet property="bestGuessUIView" destination="Xfc-5C-fI2" id="nAI-nE-CJj"/>
+                        <outlet property="bestGuessViewHeight" destination="bOJ-fn-fpp" id="7vy-x1-Nx1"/>
+                        <outlet property="firstWorkoutLabel" destination="kEJ-7k-yNp" id="dPu-cZ-h9C"/>
                         <outlet property="profileImageView" destination="2N4-ET-ugO" id="qgH-CI-pRc"/>
+                        <outlet property="workoutsCountLabel" destination="feV-j3-SlF" id="tXK-SY-g7q"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="oOC-iE-wqJ">
+                    <connections>
+                        <action selector="tapBestGuess:" destination="BYZ-38-t0r" id="21Z-Uk-vDB"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="140" y="132.68365817091455"/>
         </scene>
